--- a/HTML/html.html
+++ b/HTML/html.html
@@ -13,7 +13,9 @@
                 listeleme etiketleri    = <ol> </ol> - <ul> </ul> - <dl> </dl>
                 veri giriş etiketi      = <input> (input verilerinin gönderilip/alınabilmesi için <form> </form> etiketi kullanılır.)
                 form etiketi            = <form> </form>
-                gruplama                = <span> </span>  
+                gruplama (satır içi)    = <span> </span>
+                gruplama (blok)         = <div> </div>
+                html videoları          = <iframe> </iframe>
             attributes = (özellikler) Elementlere genişlik (width="...") yada yükseklik (height="...") gibi özellikler veren kullanımlar.
                 resim ayrıntıları       = <img width="..." height="..." src="url" resim açıklaması />
                 link ayrıntıları        = <a target="_blank" href="url"> link açıklaması </a>
