align, position, z-index, menu, fontawesome added

--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -235,15 +235,172 @@
                 </ul>
                 </p>
             </details>
-            <details Yeni Konu>
-                <summary><b>Yeni Konu</b></summary>
+            <details Align>
+                <summary><b>Align</b></summary>
                 <p>
-                <ul>
-                    <li><b></b><i></i></li>
-                    <li><b></b><i></i></li>
-                    <li><b></b><i></i></li>
-                    <li><b></b><i></i></li>
-                    <li><b></b><i></i></li>
+                    <b>
+                        < div </b><i>class="classadı"</i><b>> < /div></b>
+                            <ul type="disc">
+                                <li><b>float: </b><i>left, right, top, bottom</i> (sıralama düzeni)</li>
+                            </ul>
+                </p>
+            </details>
+            <details Display - Position>
+                <summary><b>Display - Position</b></summary>
+                <p>
+                    <b>
+                        < div </b><i>class="classadı"</i><b>> < /div></b>
+                            <ul type="disc">
+                                <li><b>display</b><i></i></li>
+                                <ul type="circle">
+                                    <li><b></b><i></i></li>
+                                </ul>
+                                <li><b>position</b><i></i></li>
+                                <ul type="circle">
+                                    <li><b>position: </b><i>relative </i>(sıralama noktasını baz alır)</li>
+                                    <ul type="square">
+                                        <li><b>left: </b><i>10px</i></li>
+                                        <li><b>right: </b><i>10px</i></li>
+                                        <li><b>top: </b><i>10px</i></li>
+                                        <li><b>bottom: </b><i>10px</i></li>
+                                    </ul>
+                                    <li><b>position: </b><i>absolute </i>(başlangıç noktasını baz alır)</li>
+                                    <ul type="square">
+                                        <li><b>left: </b><i>10px</i></li>
+                                        <li><b>right: </b><i>10px</i></li>
+                                        <li><b>top: </b><i>10px</i></li>
+                                        <li><b>bottom: </b><i>10px</i></li>
+                                    </ul>
+                                </ul>
+                            </ul>
+                </p>
+            </details>
+            <details Z Index>
+                <summary><b>Z Index</b></summary>
+                <p>
+                <ul type="disc">
+                    <li><b>z-index = </b>üç boyutlu konumlandırma</li>
+                    <ul type="circle">
+                        <li><b>z-index: </b><i>1 </i>(üstte konumlandırma)</li>
+                        <li><b>z-index: </b><i>-1 </i>(altta konumlandırma)</li>
+                    </ul>
+                </ul>
+                </p>
+            </details>
+            <details Menu>
+                <summary><b>Menu</b></summary>
+                <p>
+                    <i>
+                        < ul class="classadı">
+                    </i> <br>
+                    <i>
+                        < li>
+                            < a href="#">Anasayfa< /a>
+                                    < /li>
+                    </i> <br>
+                    <i>
+                        < li>
+                            < a href="#">Hakkımızda< /a>
+                                    < /li>
+                    </i> <br>
+                    <i>
+                        < li>
+                            < a href="#">Ürünler< /a>
+                                    < /li>
+                    </i> <br>
+                    <i>
+                        < li>
+                            < a href="#">İletişim< /a>
+                                    < /li>
+                    </i> <br>
+                    <i>
+                        < /ul>
+                    </i>
+                <ul type="disc">
+                    <H3>MENÜ ÖRNEĞİ 1</H3>
+                    <li><b>* </b><i>{font-family: "Courier New", Courier, monospace} </i>(font değiştirme)</li>
+                    <li><b>.classadı </b><i>{list-style-type: none} </i>(liste simgelerini kaldırma)</li>
+                    <li><b>.classadı </b><i>{margin: 0px} </i>(dış boşlukları kaldırma)</li>
+                    <li><b>.classadı </b><i>{padding: 0px} </i>(iç boşlukları kaldırma)</li>
+                    <li><b>.classadı li </b><i>{float: left, right, top, bottom} </i>(yanyana - altalta sıralama)</li>
+                    <li><b>.classadı li </b><i>{margin-right, left, top, bottom: 5px} </i>(dış boşluk bırakma)</li>
+                    <li><b>.classadı li a </b><i>{text-decoration: none} </i>(link altçizgilerini kaldırma)</li>
+                    <li><b>.classadı li a </b><i>{color: white} </i>(link renklerini değiştirme)</li>
+                    <li><b>.classadı li a </b><i>{background-color: coral} </i>(link arkaplan renklerini değiştirme)
+                    </li>
+                    <li><b>.classadı li a </b><i>{padding: 5px 10px} </i>(menü kutusu iç boşluğu verme)</li>
+                    <li><b>.classadı li a:hover </b><i>{background-color: lightcoral} </i>(menü kutusu üzerine
+                        gelindiğinde)</li>
+                    <H3>MENÜ ÖRNEĞİ 2</H3>
+                    <li><b>* </b><i>{font-family: "Courier New", Courier, monospace} </i>(font değiştirme)</li>
+                    <li><b>.classadı </b><i>{list-style-type: none} </i>(liste simgelerini kaldırma)</li>
+                    <li><b>.classadı </b><i>{margin: 0px} </i>(dış boşlukları kaldırma)</li>
+                    <li><b>.classadı </b><i>{padding: 0px} </i>(iç boşlukları kaldırma)</li>
+                    <li><b>.classadı li </b><i>{float: left, right, top, bottom} </i>(yanyana - altalta sıralama)</li>
+                    <li><b>.classadı </b><i>{background-color: black} </i>(menü arkaplan rengi değiştirme)</li>
+                    <li><b>.classadı </b><i>{height: 20px} </i>(boyut verme)</li>
+                    <li><b>* </b><i>{margin: 0px} </i>(sayfa dış boşluğu)</li>
+                    <li><b>* </b><i>{padding: 0px} </i>(sayfa iç boşluğu)</li>
+                    <li><b>.classadı </b><i>{line-height: 20px} </i>(boyut verme, verilen height değeriyle aynı olmalı)
+                    </li>
+                    <li><b>.classadı li a </b><i>{text-decoration: none} </i>(link altçizgilerini kaldırma)</li>
+                    <li><b>.classadı li a </b><i>{color: #ccc} </i>(link rengini değiştirme)</li>
+                    <li><b>.classadı li a:hover </b><i>{background-color: gray} </i>(menü kutusu üzerine gelindiğinde
+                        değişen arka plan rengi)</li>
+                    <li><b>.classadı li a:hover </b><i>{color: orange} </i>(menü kutusu üzerine gelindiğinde değişen
+                        yazı rengi)</li>
+                    <li><b>.classadı li a </b><i>{display: block} </i>(link alanını büyütme)</li>
+                    <li><b>.classadı li a </b><i>{padding: 0px 10px} </i>(linklere soldan sağa padding verme)</li>
+                    <li><b>.classadı li a:hover </b><i>{border-bottom: 1px solid orange} </i>(menü kutusu üzerine
+                        gelindiğinde kutu altçizgisi)</li>
+                    <li><b>.classadı </b><i>{border-bottom: 1px solid black} </i>(tüm menüye arkaplan renginde altçizgi
+                        verme, menü kutusu üzerine gelindiğinde çıkıntı olmasını engellemek için)</li>
+                    <li><b>.classadı li a:hover </b><i>{transition: all ease-in 0.2s} </i>(menü kutusu üzerine
+                        gelindiğinde kutu altçizgisi)</li>
+                </ul>
+                </p>
+            </details>
+            <details Fontawesome (font ikonları)>
+                <summary><b>Fontawesome (font ikonları)</b></summary>
+                <p>
+                <ol>
+                    <li>İnternetten Fontawesome'ı indir.</li>
+                    <li>Fontawesome klasöründeki css klasöründe bulunan iki dosyadan birini seç. (min browserlarda daha
+                        hızlı okunur)</li>
+                    <li>Seçtiğin dosyayı, çalıştığın html dosyasına <b>
+                            < link rel="stylesheet" href="fontawesome/css/font-awesome.css (dosya yolu)">
+                        </b> kullanarak tanımla.</li>
+                    <li><b>< i class="fa fa-ikonkodu">< /i></b> şeklinde kullanılır.</li>
+                        <i><u>(Kullanım detaylarına ve ikon kodlarına fontawesome web sitesi üzerinden ulaşabilirsin.)</u></i> <a href="https://fontawesome.com/">Fontawesome</a>
+                </ol>
+                </p>
+                <p>
+                    <i>
+                        < ul class="classadı">
+                    </i> <br>
+                    <i>
+                        < li>
+                            < a href="#"><b>< i class="fa fa-home">< /i></b> Anasayfa< /a> 
+                                    < /li>
+                    </i> <br>
+                    <i>
+                        < li>
+                            < a href="#"><b>< i class="fa fa-users">< /i></b> Hakkımızda< /a>
+                                    < /li>
+                    </i> <br>
+                    <i>
+                        < li>
+                            < a href="#"><b>< i class="fa fa-shopping-basket">< /i> </b> Ürünler< /a>
+                                    < /li>
+                    </i> <br>
+                    <i>
+                        < li>
+                            < a href="#"><b>< i class="fa fa-phone-square">< /i></b> İletişim< /a>
+                                    < /li>
+                    </i> <br>
+                    <i>
+                        < /ul>
+                    </i>
                 </ul>
                 </p>
             </details>
