--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -80,18 +80,20 @@
                 <p>
                     <i><u>Birden çok html dosyasına</u> CSS ile etki etmek istendiğinde kullanılır.</i><br>
                     <i><b>Internal</b> yada <b>InLine yazılan CSS kodları</b> <u>External CSS kodlarını ezer.</u>
-                <ol>
-                    <u>Projenin bulunduğu klasör içerisinde</u> <mark>style.css</mark> adında bir dosya oluşturulur.
-                    <br>
-                    CSS tanımlamaları bu dosyanın içerisine yazılır ve dosya içerisinde tekrardan < style>
-                        </style> tagi kullanılmaz. <br><br>
-                        Daha sonra <u>çalışılan html dosyası içerisinde</u> <mark>style.css</mark> dosyasıyla şu şekilde
-                        bağlantı
-                        kurulur ; <br>
-                        <b>
-                            < link rel="stylesheet" href="style.css">
-                        </b>
-                </ol>
+                        <ol>
+                            <u>Projenin bulunduğu klasör içerisinde</u> <mark>style.css</mark> adında bir dosya
+                            oluşturulur.
+                            <br>
+                            CSS tanımlamaları bu dosyanın içerisine yazılır ve dosya içerisinde tekrardan < style>
+                                </style> tagi kullanılmaz. <br><br>
+                                Daha sonra <u>çalışılan html dosyası içerisinde</u> <mark>style.css</mark> dosyasıyla şu
+                                şekilde
+                                bağlantı
+                                kurulur ; <br>
+                                <b>
+                                    < link rel="stylesheet" href="style.css">
+                                </b>
+                        </ol>
                 </p>
             </details>
         </ol>
@@ -156,13 +158,14 @@
                 <ul type="disc">
                     <li><b>Color: </b><i>renk adı, kodu, rgb kodu</i></li>
                     <li><b>Text-align: </b><i>left, right, center, justify, start, end, inherit, match-parent</i></li>
-                    <li><b>Text-decoration: </b><i>none</i></li>
-                    <li><b>Text-transform: </b><i>none, lowercase, uppercase, capitalize, full-width, full-size-kana,
-                            inherit</i></li>
+                    <li><b>Text-decoration: </b><i>none, dashed, dotted, double, line-through, overline, solid,
+                            underline, wavy</i></li>
+                    <li><b>Text-transform: </b><i>none, lowercase, uppercase, capitalize, inherit, initial, unset,
+                            calc(), var(), full-width, full-size-kana</i></li>
                     <li><b>Text-indent: </b><i>50px, 10%</i> (paragraf girişi)</li>
                     <li><b>Line-height: </b><i>25px</i> (satırlar arası boşluk)</li>
-                    <li><b>Letter-spacing: </b><i>1px</i></li>
-                    <li><b>Word-spacing: </b><i>5px</i></li>
+                    <li><b>Letter-spacing: </b><i>1px</i>(harfler arası boşluk)</li>
+                    <li><b>Word-spacing: </b><i>5px</i>(kelimeler arası boşluk)</li>
                 </ul>
                 </p>
             </details>
@@ -181,6 +184,7 @@
                 <summary><b>List</b></summary>
                 <p>
                 <ul type="disc">
+                    <li><b>.classadı </b><i>{list-style-type: none}</i> (liste simgesi kaldırma)</li>
                     <li><b>.classadı </b><i>{list-style-type: disc, circle, square}</i> (liste simgesi değiştirme)</li>
                     <li><b>.classadı </b><i>{list-style-image: url (image)}</i> (liste simgesini özelleştirme)</li>
                     <li><b>.classadı </b><i>{list-style-position: inside, outside}</i> (liste girintisi)</li>
