--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -113,7 +113,21 @@
             <i>selector declaration</i> <br>
             <i>declaration = {property: value;}</i> <br>
             <br>
-            <b>seçici {özellik:değer; özellik2:değer}</b> body {color: blueviolet}
+            <b>seçici {özellik:değer; özellik2:değer}</b> <br>
+            body {color: blueviolet;}<br>
+            <br>
+            <details Group Selectors>
+                <summary><b>Group Selectors:</b></summary>
+                <ul type="disc">
+                    <li><b>* = </b><i>tüm etiketler</i></li>
+                    <li><b>p = </b><i>tüm paragraf etiketleri</i></li>
+                    <li><b>div p = </b><i>div içindeki tüm p etiketleri</i></li>
+                    <li><b>div, p = </b><i>tüm div etiketleri ve tüm p etiketleri</i></li>
+                    <li><b>div> p = </b><i>üst etiketi div olan tüm p etiketleri</i></li>
+                    <li><b>p - div = </b><i>p ile aynı seviyedeki tüm div etiketleri</i></li>
+                    <li><b>p + div = </b><i>p etiketinden sonra gelen tüm div etiketleri</i></li>
+                </ul>
+            </details>
         </ul>
         </P>
     </details> <br>
@@ -128,7 +142,6 @@
                         </style>
                 </b> etiketiyle oluşturulur.
             </li>
-            <li>* tüm sayfaya etki eder.</li>
             <li>Oluşturulmuş <u>id'yi seçmek için</u> <b>#id adı</b> yazılır.</li>
             <li>Oluşturulmuş <u>class'ı seçmek için</u> <b>.class adı</b> yazılır.</li>
             <li>Değerden sonra girilen <b>!important</b> tagi seçili attribute'e verilen değeri diğer genel
