id-class-selectors, group-selectors added

--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -117,15 +117,32 @@
             body {color: blueviolet;}<br>
             <br>
             <details Group Selectors>
-                <summary><b>Group Selectors:</b></summary>
+                <summary><b>Group Selectors:</b></summary><br>
                 <ul type="disc">
                     <li><b>* = </b><i>tüm etiketler</i></li>
                     <li><b>p = </b><i>tüm paragraf etiketleri</i></li>
+                    <li><b>div.classadı = </b><i>belli sınıftaki divleri seçer</i>(divin kendisi)</li>
+                    <li><b>div .classadı = </b><i>belli sınıfları seçer</i>(divin altındaki sınıflar)</li>
                     <li><b>div p = </b><i>div içindeki tüm p etiketleri</i></li>
-                    <li><b>div, p = </b><i>tüm div etiketleri ve tüm p etiketleri</i></li>
-                    <li><b>div> p = </b><i>üst etiketi div olan tüm p etiketleri</i></li>
-                    <li><b>p - div = </b><i>p ile aynı seviyedeki tüm div etiketleri</i></li>
-                    <li><b>p + div = </b><i>p etiketinden sonra gelen tüm div etiketleri</i></li>
+                    <li><b>div>p = </b><i>sadece üst etiketi div olan p etiketleri</i></li>
+                    <li><b>div,p = </b><i>tüm div etiketleri ve tüm p etiketleri</i></li>
+                    <li><b>p~div = </b><i>p ile aynı seviyedeki div etiketleri ve p etiketlerinden sonra gelen div etiketleri</i></li>
+                    <li><b>p+div = </b><i>p etiketinden sonra gelen ilk div etiketleri</i></li>
+                </ul><br>
+            </details>
+            <details Attribute Selectors>
+                <summary><b>Attribute Selectors:</b></summary><br>
+                <ul type="disc">
+                    <li><b></b><i></i></li>
+                    <li><b></b><i></i></li>
+                    <li><b></b><i></i></li>
+                    <li><b></b><i></i></li>
+                    <li><b></b><i></i></li>
+                    <li><b></b><i></i></li>
+                    <li><b></b><i></i></li>
+                    <li><b></b><i></i></li>
+                    <li><b></b><i></i></li>
+                    <li><b></b><i></i></li>
                 </ul>
             </details>
         </ul>
