attribute selectors added

--- a/CSS/Uygulamalar/ToDo/todo.html
+++ b/CSS/Uygulamalar/ToDo/todo.html
@@ -14,12 +14,12 @@
 
 <body>
     <ul class="todo">
-        <li id="li1" style="text-decoration: line-through;"><input type="checkbox" checked> 8'de uyan</li>
-        <li id="li2" style="text-decoration: line-through;"><input type="checkbox" checked> Kahvaltı yap</li>
-        <li id="li3" style="text-decoration: line-through;"><input type="checkbox" checked> 9'da işe git</li>
-        <li id="li4"><input type="checkbox"> 17'de işten çık, arkadaşlarınla zaman geçir</li>
-        <li id="li5"><input type="checkbox"> 20'de eve gel</li>
-        <li id="li6"><input type="checkbox"> 23'de uyu</li>
+        <li id="li1"><input type="checkbox" checked> 8'de uyan</li>
+        <li id="li2"><input type="checkbox" checked> Kahvaltı yap</li>
+        <li id="li3"><input type="checkbox" checked> 9'da işe git</li>
+        <li class="line-through"><input type="checkbox" checked> 17'de işten çık, arkadaşlarınla zaman geçir</li>
+        <li class="line-through"><input type="checkbox" checked> 20'de eve gel</li>
+        <li class="line-through"><input type="checkbox" checked> 23'de uyu</li>
     </ul>
 </body>
 
